--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,35 @@
+/*-----General rules-----*/
 body {
-    background-color: aquamarine;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+nav {
+    background-color: #2c3e50;
+}
+
+main {
+    flex: 1 0 auto;
+    background-color: #ffffff;
+  }
+
+.btn-color {
+    background-color: #3498db;
+  }
+
+  /*-----nav-----*/
+img {
+    width: 150px;
+    height: auto;
+    margin: 5px 0 0 15px;
+}
+  /*-----Footer-----*/
+.page-footer,
+.footer-copyright {
+    background-color:#222f3e !important;
+}
+
+footer i {
+    color: #3498db;
 }
