--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 <body>
+    
     <!-- Navigation -->
     <ul id="dropdown1" class="dropdown-content">
         <li><a href="#!">one</a></li>
@@ -19,31 +20,43 @@
     </ul>
     <nav>
         <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">Logo</a>
+            <a href="#!" class="brand-logo">
+                <img class="responsive-img" src="{% static 'images/LinkOfLinks_logo.jpg' %}" alt="Logo image List Of List">
+            </a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <!-- Dropdown Trigger -->
-                <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i
-                            class="material-icons right">arrow_drop_down</i></a></li>
+                <li><a href="#">Sass</a></li>
+                <li><a href="#">Components</a></li>
+                <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
             </ul>
+            <ul class="side-nav" id="mobile-demo">
+                <li><a href="#">Sass</a></li>
+                <li><a href="#">Components_1</a></li>
+                <li><a href="#">Components_2</a></li>
+            </ul>
+            <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons">menu</i></a>
         </div>
     </nav>
 
     <main>
-
+        <button class="btn-color" id="btnrar">test</button>
     </main>
 
     <!--footer-->
     <footer>
-
+        <footer class="page-footer">
+            <div class="footer-copyright">
+              <div class="container">
+              © 2023
+              <a class="grey-text text-lighten-4 right" href="https://github.com/satogako/list-of-links" target="_blank">
+                <i class="fa-brands fa-github-alt fa-2xl"></i>
+              </a>
+              </div>
+            </div>
+          </footer>
     </footer>
-
-
-
-
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="{% static 'js/materialize.min.js' %}"></script> 
-    <script src="{% static 'js/script.js' %}"></script> 
+    <script src="{% static 'js/script.js' %}"></script>
+    <script src="https://kit.fontawesome.com/4098b4a9a9.js" crossorigin="anonymous"></script> 
 </body>
 </html>
