--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,35 +1,72 @@
 /*-----General rules-----*/
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-  }
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
 
 nav {
-    background-color: #2c3e50;
+  background-color: #2c3e50;
 }
 
 main {
-    flex: 1 0 auto;
-    background-color: #ffffff;
-  }
+  flex: 1 0 auto;
+  background-color: #ffffff;
+  margin: 0 2%
+}
+
+
+/*-----for buttons and links-----*/
+.hand-cursor{
+  cursor: pointer;
+}
+
+.active {
+  border-bottom: 2px solid #27ae61;
+}
 
 .btn-color {
-    background-color: #3498db;
-  }
-
-  /*-----nav-----*/
-img {
-    width: 150px;
-    height: auto;
-    margin: 5px 0 0 15px;
+  background-color: #3498db;
 }
-  /*-----Footer-----*/
+
+
+/*-----nav-----*/
+nav img {
+  width: 145px;
+  height: auto;
+  margin: 5px 0 0 15px;
+  transition: transform 0.3s;
+}
+
+nav img:hover {
+  transform: scale(1.2)
+}
+
+.nav-wrapper li a:hover {
+  color: #27ae61;
+  background-color: #222f3e;
+  font-weight: bold;
+}
+
+
+/*-----main-----*/
+.card {
+  background-color: #f5f5f5;
+}
+
+    
+/*-----Footer-----*/
 .page-footer,
 .footer-copyright {
-    background-color:#222f3e !important;
+  background-color:#222f3e !important;
 }
 
 footer i {
-    color: #3498db;
+  color: #3498db;
+  transition: transform 0.3s;
+}
+
+footer i:hover {
+  color: #27ae61;
+  transform: scale(1.2);
 }
