--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,11 @@
     </ul>
     <nav>
         <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">
+            <a data-target="modal-about" class="modal-trigger hand-cursor">
                 <img class="responsive-img" src="{% static 'images/LinkOfLinks_logo.jpg' %}" alt="Logo image List Of List">
             </a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="#">Sass</a></li>
+                <li><a href="{% url 'all_resources' %}"><span class="active">All Resources</span></a></li>
                 <li><a href="#">Components</a></li>
                 <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
             </ul>
@@ -36,9 +36,12 @@
             <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons">menu</i></a>
         </div>
     </nav>
-
+    
+    <!--main-->
     <main>
-        <button class="btn-color" id="btnrar">test</button>
+        {% block content %}
+        <!--Content Goes here-->
+        {% endblock content %}
     </main>
 
     <!--footer-->
@@ -54,9 +57,21 @@
             </div>
           </footer>
     </footer>
+
+    <!-- Modal-About Window -->
+    <div id="modal-about" class="modal">
+        <div class="modal-content">
+            <h4>Modal Header</h4>
+            <p>A bunch of text</p>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-light btn btn-color">Agree</a>
+        </div>
+    </div>
+    
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="{% static 'js/materialize.min.js' %}"></script> 
     <script src="{% static 'js/script.js' %}"></script>
-    <script src="https://kit.fontawesome.com/4098b4a9a9.js" crossorigin="anonymous"></script> 
+    <script src="https://kit.fontawesome.com/4098b4a9a9.js" crossorigin="anonymous"></script>
 </body>
 </html>
