--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,8 +21,8 @@ main {
   cursor: pointer;
 }
 
-.active {
-  border-bottom: 2px solid #27ae61;
+.active-navbar {
+  border-bottom: 1px solid white;
 }
 
 .btn-color {
@@ -52,6 +52,36 @@ nav img:hover {
 /*-----main-----*/
 .card {
   background-color: #f5f5f5;
+}
+
+.card img {
+  position: relative;
+}
+
+.sticker {
+  position: absolute;
+  height: 20px;
+  width: auto;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  padding: 0 5px;
+  background-color: #26a69a;
+  bottom: 8px;
+  left: 0px;
+  color: white;
+}
+
+.font-weight-size {
+  font-weight: 400;
+  font-size: x-small;
+}
+
+.font-weight-size strong {
+  font-size: small;
+}
+
+.nav-pagination {
+  margin-top: auto;
 }
 
     
