--- a/templates/index.html
+++ b/templates/index.html
@@ -1,102 +1,54 @@
 {% extends "base.html" %}
 
 {% block content %}
-{% load static %}
+
+
 <div class="row">
-    <div class="col s12 m6 l4">
-    <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="{% static 'images/LinkOfLinks_logo.jpg' %}" style="width: 350px;
-            height: auto;">
-        </div>
-        <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-            <p class="activator hand-cursor">
-                I am a very simple card. I am a very simple card. I am a very simple card. I am a very simple card. I am a very simple card.
-            </p>
-        </div>
-        <div class="card-action">
-            <a href="#" target="_blank">This is a link</a>
-        </div>
-        <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i>Card Title</span>
-            <a class="waves-effect waves-light btn btn-color">Add You Comment</a>
-            <p>
-                Here is some more information about this product that is only revealed once clicked on.
-                Here is some more information about this product that is only revealed once clicked on.
-                Here is some more information about this product that is only revealed once clicked on.
-                Here is some more information about this product that is only revealed once clicked on.
-                Here is some more information about this product that is only revealed once clicked on.
-                Here is some more information about this product that is only revealed once clicked on.
-                Here is some more information about this product that is only revealed once clicked on.
-                Here is some more information about this product that is only revealed once clicked on.
-                Here is some more information about this product that is only revealed once clicked on.
-                Here is some more information about this product that is only revealed once clicked on.
-                Here is some more information about this product that is only revealed once clicked on.
-                Here is some more information about this product that is only revealed once clicked on.
-            </p>
-        </div>
-    </div>
-    </div>
-
-
-    <div class="col s12 m6 l4">
-    <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="{% static 'images/LinkOfLinks_logo.jpg' %}" style="width: 350px;
-            height: auto;">
-        </div>
-        <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-            <p class="activator hand-cursor">
-                I am a very simple card. I am a very simple card. I am a very simple card. I am a very simple card. I am a very simple card.
-            </p>
-        </div>
-        <div class="card-action">
-            <a href="#" target="_blank">This is a link</a>
-        </div>
-        <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i>Card Title</span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    {% for data in resource_list %}
+    <div class="col s12 m4">
+        <div class="card hoverable">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="{{ data.site_screenshot.url }}">
+                <span class="sticker z-depth-4">Author: {{ data.author }}</span>
+            </div>
+            <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">{{ data.title }}<i class="material-icons right">more_vert</i></span>
+                <p class="activator hand-cursor">
+                    {{ data.content|striptags }}
+                </p>
+                <p class="right-align font-weight-size">{{ data.created_on }}  
+                    <i class="tiny material-icons">star_border</i><strong>{{ data.number_of_likes }}</strong>
+                </p>
+            </div>
+            <div class="card-action">
+                <a href="{{ data.url }}" target="_blank">This is a link</a>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i>Card Title</span>
+                <a class="waves-effect waves-light btn btn-color">Add You Comment</a>
+                <p>
+                    Here is some more information about this product that is only revealed once clicked on.
+                    Here is some more information about this product that is only revealed once clicked on.
+                    Here is some more information about this product that is only revealed once clicked on.
+                    Here is some more information about this product that is only revealed once clicked on.
+                    Here is some more information about this product that is only revealed once clicked on.
+                    Here is some more information about this product that is only revealed once clicked on.
+                    Here is some more information about this product that is only revealed once clicked on.
+                    Here is some more information about this product that is only revealed once clicked on.
+                    Here is some more information about this product that is only revealed once clicked on.
+                    Here is some more information about this product that is only revealed once clicked on.
+                    Here is some more information about this product that is only revealed once clicked on.
+                    Here is some more information about this product that is only revealed once clicked on.
+                </p>
+            </div>
         </div>
     </div>
-    </div>
-
-
-    <div class="col s12 m6 l4">
-    <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="{% static 'images/LinkOfLinks_logo.jpg' %}" style="width: 350px;
-            height: auto;">
-        </div>
-        <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-            <p class="activator hand-cursor">
-                I am a very simple card. I am a very simple card. I am a very simple card. I am a very simple card.
-            </p>
-        </div>
-        <div class="card-action">
-            <a href="#" target="_blank">This is a link</a>
-        </div>
-        <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i>Card Title</span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
-        </div>
-    </div>
-    </div>
+    {% if forloop.counter|divisibleby:3 %}
 </div>
-{% for data in resource_list %}
-
-<h6>{{ data.title }}</h6>
-    {{ data.author }}
-    {{ data.url}}
-    condit{{ data.condition}}
-    tags{{ data.tags}}
-    <img src="{{ data.site_screenshot}}" alt="">
-    {{ data.created_on}}
-    <hr>
-{% endfor %}
-
+<div class="row">
+    {% endif %}
+    {% endfor %}
+</div>
 
 
 {% endblock %}
