--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,20 @@
                 <img class="responsive-img" src="{% static 'images/LinkOfLinks_logo.jpg' %}" alt="Logo image List Of List">
             </a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="{% url 'all_resources' %}"><span class="active-navbar">All Resources</span></a></li>
-                <li><a href="#">Components</a></li>
+                <li>
+                    <a href="{% url 'all_resources' %}">
+                        {% block active_link_index %}
+                        <span>All Resources</span>
+                        {% endblock %}
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'categories' %}">
+                        {% block active_link_categories %}
+                        <span>Categories</span>   
+                        {% endblock %}
+                    </a>
+                </li>
                 <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
@@ -45,7 +57,7 @@
     </main>
 
     <!--nav pagination-->
-    <div class="nav-pagination">
+    <div class="nav-pagination" aria-label="Page navigation">
         {% if page_obj.has_other_pages %}
             <ul class="pagination center bottom">
                 {% if page_obj.has_previous %}
