--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block active_link_index %}
+<span class="active-navbar">All Resources</span>
+{% endblock %}
+
 {% block content %}
 
 
