--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
         <div class="modal-content">
             <h4>List of Links</h4>
             <p>
-                Welcome to my website! Here, you will find a curated collection of links, 
+                Welcome to my website List of Links! Here, you will find a curated collection of links, 
                 screenshots, and brief descriptions of resources specifically tailored for 
                 web developers. Whether you're seeking inspiration, tutorials, or tools, 
                 this site has got you covered. Explore the carefully selected resources and 
