--- a/templates/index.html
+++ b/templates/index.html
@@ -29,20 +29,9 @@
             </div>
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i>Card Title</span>
-                <a class="waves-effect waves-light btn btn-color">Add You Comment</a>
+                <a class="waves-effect waves-light btn btn-color" href="{% url 'resourсe_details' post.slug %}">Add You Comment</a> 
                 <p>
-                    Here is some more information about this product that is only revealed once clicked on.
-                    Here is some more information about this product that is only revealed once clicked on.
-                    Here is some more information about this product that is only revealed once clicked on.
-                    Here is some more information about this product that is only revealed once clicked on.
-                    Here is some more information about this product that is only revealed once clicked on.
-                    Here is some more information about this product that is only revealed once clicked on.
-                    Here is some more information about this product that is only revealed once clicked on.
-                    Here is some more information about this product that is only revealed once clicked on.
-                    Here is some more information about this product that is only revealed once clicked on.
-                    Here is some more information about this product that is only revealed once clicked on.
-                    Here is some more information about this product that is only revealed once clicked on.
-                    Here is some more information about this product that is only revealed once clicked on.
+                    Here is some more information about this product that is only revealed once clicked on.               
                 </p>
             </div>
         </div>
