Fix error in the idex.html in line 32(data.slug)

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -6,6 +6,10 @@
 
 {% block content %}
 
-<p>Hello</p>
-
+<div>
+    
+    {% for tag in tags %}
+    <a href="{% url 'tag' tag %}">#{{tag}}</a>
+    {% endfor %}
+</div>
 {% endblock %}
