--- a/templates/resource_details.htm
+++ b/templates/resource_details.htm
@@ -3,33 +3,76 @@
 {% block content %}
 
 <div class="row">
-    <div class="col 12">
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.author }} | {{ post.created_on }}</p>
-        <p>Content field from model Resource: {{ post.content | safe }}</p>
-        <p>author:  {{ post.author }}</p>
-        <p>apdate_on:  {{ post.apdate_on }}</p>
-        <p>site_screenshot: <img src="{{post.site_screenshot.url}}" width="550" alt=""> </p>
-        <p>condition: {{post.condition}} </p>
-        <p>tags: {{post.tags}} </p>
-        <p>admirers: {{post.number_of_likes}} </p>
-
-        {% with comments.count as number_of_comments %}
-       <p>Total comments:  {{ number_of_comments}}</p>
-       {% endwith %}
-
-
-
-        <p>{% for comment in comments %}</p>
-        <p>Post:  {{ comment.post }}</p>
-        <p>name:  {{ comment.name }}</p>
-        <p>email:  {{ comment.email }}</p>
-        <p>comment field:  {{ comment.comment_field }}</p>
-        <p>created_on:  {{ comment.created_on }}</p>
-        <p>approved:  {{ comment.approved }}</p>
+    <div class="col s12 l8 offset-l2">
+        <div class="card">
+            <div class="card-image ">
+                <img src="{{post.site_screenshot.url}}" alt="">
+            </div>
+            <div class="card-content">
+                <!--Header-->
+                <div class="card-title">
+                    <h2 class="flow-text center-align"><strong>{{ post.title }}</strong></h2>
+                </div>
+                <!--Author, date create, number of comments, number of likes-->
+                <div>
+                    <p class="font-size-s">
+                        <span>
+                            <strong class="font-size-s">{{ post.author }}</strong> | {{ post.created_on }}
+                        </span>
+                        <span class="right">
+                            <i class="tiny material-icons">comment</i>
+                            {% with comments.count as number_of_comments %}
+                                <strong class="font-size-s">{{ number_of_comments}}</strong>
+                            {% endwith %}
+                        </span>
+                        <span class="right margin-right">
+                            <i class="tiny material-icons">star_border</i>
+                            <strong class="font-size-s">{{ post.number_of_likes }}</strong>
+                        </span>
+                    </p>
+                </div>
+                <div class="divider"></div>
+                <div class="row">
+                    <div class="section">
+                        <!--Comments-->
+                        <div class="col s12 l5 push-l7">
+                            <span>
+                                <h5 class="flow-text">Leave a comment:</h5>
+                                <div class="row">
+                                    <form class="col s12">
+                                        <div class="row">
+                                            <div class="input-field col s12 right">
+                                            <i class="material-icons prefix">mode_edit</i>
+                                            <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+                                            <label for="icon_prefix2">Posting as: {{ post.author }}</label>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </span>
+                        </div>
+                        <!--List of comments-->
+                        <div class="col s12 l7 pull-l5">
+                            <span>
+                                <h5 class="flow-text">Comments:</h5>
+                                {% for comment in comments %}
+                                    <br>
+                                    <blockquote>
+                                    <p class="left-align font-size-xs line-height">
+                                        <strong class="font-size-s">{{ comment.name }}</strong> | {{ comment.created_on }}
+                                    </p>
+                                    <p class="text-align-justify">{{ comment.comment_field }}</p>
+                                    </blockquote>
+                                {% endfor %}
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-        {% endfor %}
+        
 
 
 {% endblock content %}
