--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         <li><a href="#!">one</a></li>
         <li><a href="#!">two</a></li>
         <li class="divider"></li>
-        <li><a href="#!">three</a></li>
+        <li><a href="{% url 'account_logout' %}">Logout</a></li>
     </ul>
     <nav>
         <div class="nav-wrapper">
@@ -42,12 +42,40 @@
                         {% endblock %}
                     </a>
                 </li>
-                <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+                {% if not user.is_authenticated %}
+                <li>
+                    <a href="{% url 'account_signup' %}">
+                        <span>Register</span>   
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'account_login' %}">
+                        <span>Login</span>
+                    </a>
+                </li>
+                {% else %}
+                <li><a class="dropdown-button" href="#!" data-activates="dropdown1">
+                    {{ user.username }}<i class="material-icons right">arrow_drop_down</i>
+                    </a>
+                </li>
+                {% endif %}
             </ul>
             <ul class="side-nav" id="mobile-demo">
-                <li><a href="#">Sass</a></li>
-                <li><a href="#">Components_1</a></li>
-                <li><a href="#">Components_2</a></li>
+                {% if user.is_authenticated %}
+                <li><p class="text-placeholder center-align">
+                    You entered as {{ user.username }}
+                    </p>
+                </li>
+                <li class="divider"></li>
+                {% endif %}
+                <li><a href="{% url 'all_resources' %}">All Resources</a></li>
+                <li><a href="{% url 'categories' %}">Categories</a></li>
+                {% if not user.is_authenticated %}
+                <li><a href="{% url 'account_signup' %}">Register</a></li>
+                <li><a href="{% url 'account_login' %}">Login</a></li>
+                {% else %}
+                <li><a href="{% url 'account_logout' %}">Logout</a></li>
+                {% endif %}
             </ul>
             <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons">menu</i></a>
         </div>
