Add styles to the signup.html

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -34,7 +34,7 @@
           </div>
           <div class="row">
             <div class="input-field col s12 m6">
-              <input id="id_pasword" name="password" type="password" class="validate"  maxlength="150" required>
+              <input id="id_pasword" name="password" type="password" class="validate" required>
               <label for="id_pasword">Password</label>
             </div>
           </div>
