--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,21 +1,53 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
+
+{% block active_link_signup %}
+  <span class="active-navbar">Register</span>
+{% endblock %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<div class="row">
+  <div class="col s12 l8 offset-l2">
+      <div class="card">
+        <div class="card-content">
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+        <h5>{% trans "Sign Up" %}</h5>
+
+        <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+
+        <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+          {% csrf_token %}
+          <div class="row">
+            <div class="input-field col s12 m6">
+              <input id="id_username" name="username" type="text" class="validate" minlength="1" maxlength="150" required>
+              <label for="id_username">Username</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12 m6">
+              <input id="id_pasword1" name="password1" type="password" class="validate" required>
+              <label for="id_pasword1">Password</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12 m6">
+              <input id="id_pasword2" name="password2" type="password" class="validate" required>
+              <label for="id_pasword2">Password (again)</label>
+            </div>
+          </div>
+          {% if redirect_field_value %}
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+          {% endif %}
+          <button type="submit" class="waves-effect waves-light btn btn-color">{% trans "Sign Up" %} &raquo;</button>
+        </form>
+
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
