--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,9 @@
                 {% if not user.is_authenticated %}
                 <li>
                     <a href="{% url 'account_signup' %}">
-                        <span>Register</span>   
+                        {% block active_link_signup %}
+                        <span>Register</span>
+                        {% endblock %}   
                     </a>
                 </li>
                 <li>
