--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,21 +1,32 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Out" %}</h1>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<div class="row">
+  <div class="col s12 l8 offset-l2">
+      <div class="card">
+        <div class="card-content">
+          <h5>{% trans "Sign Out" %}</h5>
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
+          <p>{% trans 'Are you sure you want to sign out?' %}</p>
+
+          <form method="post" action="{% url 'account_logout' %}">
+            {% csrf_token %}
+            {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+            {% endif %}
+            <a href="{% url 'all_resources' %}" class="waves-effect waves-light btn btn-color">No</a>
+            <button type="submit" class="waves-effect waves-light btn red darken-1">{% trans 'Sign Out' %}</button>
+          </form>
+
+      </div>
+    </div>
+  </div>
+</div>
 
 
 {% endblock %}
