--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -47,6 +47,14 @@
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
+          <div class="row">
+            <div class="input-field col s12">
+              <p>Please contact
+                <a href="https://github.com/satogako/list-of-links" target="_blanks">me</a> 
+                if you have forgotten your password.
+              </p>
+            </div>
+          </div>
           <button class="primaryAction waves-effect waves-light btn btn-color" type="submit">{% trans "Sign In" %}</button>
         </form>
 
