--- a/templates/resource_details.htm
+++ b/templates/resource_details.htm
@@ -36,16 +36,24 @@
                     <div class="section">
                         <!--Comments form-->
                         <div class="col s12 l5 push-l7">
+                            {% if already_commented %}
+                            <span>
+                                <h6 class="flow-text">
+                                    Your comment has been sent for approval.
+                                </h6>
+                            </span>
+                            {% else %}
+
                             {% if user.is_authenticated %}
                             <span>
                                 <h5 class="flow-text">Leave a comment:</h5>
                                 <div class="row">
-                                    <form class="col s12">
+                                    <form method="post" class="col s12">
                                         {% csrf_token %}
                                         <div class="row">
                                             <div class="input-field col s12 right">
                                                 <i class="material-icons prefix">mode_edit</i>
-                                                <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+                                                <textarea name="comment_field" id="icon_prefix2" class="materialize-textarea"></textarea>
                                                 <label for="icon_prefix2">Posting as: {{ post.author }}</label>
                                             </div>
                                             <button type="submit" class="waves-effect waves-light btn btn-color right">Submit</button>
@@ -53,6 +61,7 @@
                                     </form>
                                 </div>
                             </span>
+                            {% endif %}
                             {% endif %}
                         </div>
                         <!--List of comments-->
