Add email field to the signup.html

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -29,6 +29,12 @@
           </div>
           <div class="row">
             <div class="input-field col s12 m6">
+              <input id="id_email" name="email" type="email" class="validate" maxlength="320" required>
+              <label for="id_email">Email</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12 m6">
               <input id="id_pasword1" name="password1" type="password" class="validate" required>
               <label for="id_pasword1">Password</label>
             </div>
