--- a/templates/resource_details.htm
+++ b/templates/resource_details.htm
@@ -44,24 +44,27 @@
                             </span>
                             {% else %}
 
-                            {% if user.is_authenticated %}
-                            <span>
-                                <h5 class="flow-text">Leave a comment:</h5>
-                                <div class="row">
-                                    <form method="post" class="col s12">
-                                        {% csrf_token %}
-                                        <div class="row">
-                                            <div class="input-field col s12 right">
-                                                <i class="material-icons prefix">mode_edit</i>
-                                                <textarea name="comment_field" id="icon_prefix2" class="materialize-textarea"></textarea>
-                                                <label for="icon_prefix2">Posting as: {{ post.author }}</label>
+                                {% if user.is_authenticated %}
+                                <span>
+                                    <h5 class="flow-text">Leave a comment:</h5>
+                                    <div class="row">
+                                        <form method="post" class="col s12">
+                                            {% csrf_token %}
+                                            <div class="row">
+                                                <div class="input-field col s12 right">
+                                                    <i class="material-icons prefix">mode_edit</i>
+                                                    <textarea name="comment_field" id="icon_prefix2" class="materialize-textarea"></textarea>
+                                                    <label for="icon_prefix2">Posting as: {{ post.author }}</label>
+                                                </div>
+                                                <button type="submit" class="waves-effect waves-light btn btn-color right">Submit</button>
                                             </div>
-                                            <button type="submit" class="waves-effect waves-light btn btn-color right">Submit</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </span>
-                            {% endif %}
+                                        </form>
+                                    </div>
+                                </span>
+                                {% else %}
+                                    <br><br>
+                                    <p class="text-placeholder">Only registered users can add comments.</p>
+                                {% endif %}
                             {% endif %}
                         </div>
                         <!--List of comments-->
