Install django-taggit and display the categories page using a class TagsList

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -6,10 +6,5 @@
 
 {% block content %}
 
-<div>
-    
-    {% for tag in tags %}
-    <a href="{% url 'tag' tag %}">#{{tag}}</a>
-    {% endfor %}
-</div>
+Hello againe 12312313
 {% endblock %}
