Install restframework, serialize resources and return them as json to the client

--- a/templates/resource_details.htm
+++ b/templates/resource_details.htm
@@ -80,7 +80,7 @@
                                 </span>
                                 {% else %}
                                     <br><br>
-                                    <p class="text-placeholder">Only registered users can add comments.</p>
+                                    <p class="text-placeholder">Register to be able to add your comments.</p>
                                 {% endif %}
                             {% endif %}
                         </div>
