Connect library Alpine.js to the base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -148,5 +148,6 @@
     <script src="{% static 'js/materialize.min.js' %}"></script> 
     <script src="{% static 'js/script.js' %}"></script>
     <script src="https://kit.fontawesome.com/4098b4a9a9.js" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.0/dist/cdn.min.js"></script>
 </body>
 </html>
