--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-
+<h1 x-data="{ message: 'I ❤️ Alpine' }" x-text="message"></h1>
 
 <div class="row">
     {% for data in resource_list %}
