--- a/templates/categories.html
+++ b/templates/categories.html
@@ -5,42 +5,72 @@
 {% endblock %}
 
 {% block content %}
+
+
+<div 
+    x-data="{tag: '', resource_list: []}"
+    x-init="resource_list = await (await fetch('/resource-list')).json()">
     <p> 
         {% for tag in tags %} 
-            <button>{{ tag.name }}</button>
+            <button 
+                class="waves-effect waves-light btn btn-color"
+                @click="tag = $el.textContent">{{ tag.name }}</button>
         {% endfor %} 
     </p> 
     <br> 
-
-    <div class="row">
-        {% for resource in resource_list %}
-        <div class="col s12 m4">
-            <div class="card hoverable">
-                <ul> 
-                     
-                        <li> 
-                            <p>{{ resource.title }}</p> 
-                            <p>{{ resource.author }}</p> 
-                            <p>{{ resource.content|striptags }}</p> 
-                        </li>
-
-                        <small>Tags:</small>
-                        {% for tag in resource.tags.all %}
-                             
-                            <small>{{ tag }},</small>
-                            
-                        {% endfor %} 
-
-                        
-                     
-                </ul> 
+    <div class="row-dis-fl">               
+        <template x-for="resource in resource_list.filter(f => f.tags.includes(tag))">        
+            <div class="col-fl">
+                <div class="card hoverable">
+                    <div class="card-content">
+                        <h2 class="card-title grey-text text-darken-4" x-text="resource.title"></h2>
+                        <p>
+                            <span>
+                                <small>Author: </small>
+                            </span>
+                            <span>
+                                <small>
+                                    <strong x-text="resource.author"></strong>
+                                </small>
+                            </span>
+                        </p>
+                        <p x-text="resource.content"></p>
+                        <p class="right-align font-size-xs" x-text="resource.created_on">
+                            <i class="tiny material-icons">star_border</i>
+                            <strong class="font-size-s" x-text="resource.number_of_likes"></strong>
+                        </p>
+                        <small class="right" x-text="resource.tags.join(', ')"></small>
+                    </div>
+                    <div class="card-action">
+                        <a x-bind:href="resource.url" target="_blank">This is a link</a>
+                    </div>
+                </div>                
             </div>
-        </div>
-        {% if forloop.counter|divisibleby:3 %}
+        </template>
     </div>
-    <div class="row">
-        {% endif %}
-        {% endfor %}
-    </div>
+</div>
+    
 
+<!--<ul> 
+                        
+    <li> 
+        <p x-text="resource.title"></p> 
+        <p x-text="resource.author"></p> 
+        <p x-text="resource.content"></p> 
+        <p x-text="resource.created_on"></p>
+        <a x-bind:href="resource.url" target="_blank">LINK</a>
+        
+        <span  class="sticker z-depth-4">
+            <span>Author: </span>
+            <span x-text="resource.author"></span>
+        </span>
+
+    </li>
+
+    <small>Tags:</small>
+     
+        
+        <small x-text="resource.tags.join(', ')"></small>                        
+
+</ul>-->
 {% endblock %}
