--- a/templates/resource_details.htm
+++ b/templates/resource_details.htm
@@ -56,7 +56,7 @@
                             {% if already_commented %}
                             <br>
                             <div class="chip teal lighten-2">
-                                Your comment has been sent for approval.
+                                Sent for approval.
                                 <i class="close material-icons">close</i>
                             </div>
                             {% else %}
